# totp-website

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  totp_website.py
templates/: index.html
